# TextTableScoop

./: README.md  pyproject.toml  requirements.txt  setup.py
projecttext/: base_parser.py  parser.py  utils.py
projecttext/archive_parsers/: __init__.py
projecttext/archives/: archives_parser.py
projecttext/parsers/: utils.py
projecttext/tables/: tables_parser.py
projecttext/tables/parsers/: csv_parser.py
projecttext/text/: text_parser.py
projecttext/text/parsers/: html_parser.py  txt_parser.py
projecttext/text_parsers/: html_parser.py
projecttextparser/: base_parser.py  parser.py
projecttextparser/table_parsers/: __init__.py  csv_parser.py  excel_parser.py
projecttextparser/text_parsers/: html_parser.py  txt_parser.py
src/: base_parser.py  cli.py  parser.py  types.py  utils.py
src/archives/: archives_parser.py
src/tables/: tables_parser.py
src/tables/parsers/: csv_parser.py
src/text/: text_parser.py
src/text/parsers/: html_parser.py  txt_parser.py
texttablescoop/: cli.py
texttablescoop/table_parsers/: excel_parser.py
texttablescoop/text_parsers/: __init__.py
