[build-system]
requires = [
    "setuptools>=40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "texttablescoop"
version = "0.1.2"
description = "Library for obtaining and organizing text data from your Project Folders."
readme = "README.md"
authors = [
    { name="Anton Potapov", email="fgreyeducation@gmail.com" }
]
license = { file="LICENSE" }
dependencies = [
    "argparse",
    "argcomplete",
    "pandas",
    "xlsx2pandas"
]
